<?xml version="1.0" encoding="utf-8"?>

<!--
    String resources
-->
<resources>
    <string name="app_name">Fitacity</string>
    <string name="app_description">Your fitnessapp</string>

    <string name="widget_title">Fitacity</string>

    <string name="menu_title_favorite">Favorites</string>
    <string name="menu_title_categories">Categories</string>

    <string name="list_item_exercise_name">Exercise name</string>
    <string name="a11y_list_item_exercise_name">Exercise name: %s</string>
    <string name="a11y_list_item_img">Image for : %s</string>

    <string name="detail_activity_fab_add_content_description">Mark exercise as favorite button</string>
    <string name="detail_activity_fab_remove_content_description">Remove exercise from favorites button</string>
    <string name="detail_activity_img_content_description">Image describing the exercise</string>
    <string name="detail_activity_description">Description</string>
    <string name="detail_activity_video">Video</string>
    <string name="detail_activity_details">Details</string>
    <string name="detail_activity_equipment">Equipment:</string>
    <string name="detail_activity_difficulty">Difficulty:</string>

    <string name="no_exercises">No exercises found</string>
    <string name="youtube_init_failed">Failed to initialize.</string>

    <string name="analytics_action">Action</string>
    <string name="analytics_action_liked">Liked:</string>
    <string name="analytics_action_disliked">Disliked:</string>

    <string name="no_favorite_exercises">No favorite exercises found!</string>

    <string name="content_authority">at.tm.android.fitacity</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
